[package]
name = "gears"
version = "0.1.0"
authors = ["Anisse Astier <anisse@astier.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.criterion]
version = "0.3"
default-features = false
features = ["cargo_bench_support"]

[[bench]]
name = "mem"
harness = false

[profile.release]
debug=true
