[package]
name = "gears"
version = "0.1.0"
authors = ["Anisse Astier <anisse@astier.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
png = "0.17.6"

[dev-dependencies.criterion]
version = "0.3"
default-features = false
features = ["cargo_bench_support"]

[features]
#default = ["pattern_debug"]
pattern_debug = []

[[bench]]
name = "mem"
harness = false

[profile.release]
#strip = "symbols"
#lto = true
debug=true

[workspace]
members = [
	"cli",
	"ui",
]
