[package]
name = "gears-web"
version = "0.1.0"
edition = "2021"
authors = ["Anisse Astier <anisse@astier.eu>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4", features = ["std"] }
wasm-bindgen = "0.2.89"
pollster = "0.3"

# all of those are web
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "File", "FileReader", "FileList", "HtmlInputElement", "Blob", "Element", "Document", "Event", "Window"] }


[dependencies.gears]
path = "../"

[dependencies.gears-ui-core]
path = "../ui-core"

[dependencies.winit]
version = "0.28.7"
default-features = false
